--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,6 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-        
     }
 }
 
@@ -61,6 +60,7 @@ project(":core") {
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.github.czyzby:gdx-kiwi:1.9.1.9.6"
         
+        compileOnly "org.projectlombok:lombok:1.18.4"
     }
 }
 
